# PulsePay2

./: .env  .env.example  .gitignore  README.md  commit_log.txt  index.html  make_commits.cjs  package-lock.json  package.json  tailwind.config.js
contracts/pulsepay2/: Cargo.toml
contracts/pulsepay2/src/: lib.rs
contracts/pulsepay2/test_snapshots/test/: test_poll.1.json
contracts/pulsepoll/: Cargo.toml
contracts/pulsepoll/src/: lib.rs
docs/: ARCHITECTURE.md
src/: App.tsx  index.css
src/components/: PollQuestion.tsx  ResultsChart.tsx  TxStatus.tsx  VoteButton.tsx  WalletConnect.tsx
src/hooks/: useContract.ts  useWallet.ts
src/services/: contractService.ts
src/types/: index.ts
